Version: 12021.06.05 :: Fixed spacing on the folder dropdown arrow.

--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -2,7 +2,7 @@
   Title: Drannex42's Personal userChrome.css for Firefox
   Description: This is my personal userChrome for Firefox, I specifically clean up the interface, change the folder icon to Vivaldi's (much better) and reduce padding in some areas, and add some in others. This overall creates a much more streamlined interface.
   Features: Streamlines interface, folder icon replacement, works best with my custom Tree Style Tabs interface (check it out! treestyletabs.css in the /firefox/ directory), removes tab bar.
-  Version: 12021.04.05 :: Now built for proton! and the correct year!
+  Version: 12021.06.05 :: Fixed spacing on the folder dropdown arrow. 
 */
 
 #main-window[tabsintitlebar="true"]:not([extradragspace="true"]) #TabsToolbar > .toolbar-items {
@@ -102,6 +102,10 @@
     min-width: var(--sidebar-width) !important;
     max-width: var(--sidebar-width) !important;
     overflow: hidden !important;
+     transition-property: width;
+    transition-duration: .25s;
+    transition-delay: .25s;
+    transition-timing-function: ease-in;
 }
 
 .browser-toolbar {
@@ -215,13 +219,13 @@ toolbarseparator {
 
 /* Add down arrow to folders on the bookmark bar */
 .bookmark-item[container]::after {
-    content: "ˇ";
-    opacity: 0.7;
-    padding-left: 3px;
-    font-size: 22px;
-    display: inline-block;
-    position: absolute;
-    top: 5px;
+  content: "ˇ";
+  opacity: 0.65;
+  padding-left: 3px;
+  font-size: 22px;
+  display: inline-block;
+  position: absolute;
+  top: 5.5px;
 }
 
 /* Change the Avatar size for the Firefox Account to what makes sense */
